refactor: update assertions in TransactionServiceTest to use getFirst() for clarity